# erpnext_demo

./: README.md  pyproject.toml
erpnext_demo/: hooks.py  send_mail_api.py
erpnext_demo/public/js/: send_item_email.js
