[project]
name = "erpnext_demo"
authors = [
    { name = "nirvisha", email = "nirvishasoni2897@gmail.com"}
]
description = "ERPNext Demo to send mail of Item"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
